tests/errors/semantic/blocking/APPEND_LIST_INCOMPATIBLE_TYPES_2.py
# Expecting an argument of the same type as the elements of the list
# pylint: disable=missing-function-docstring, missing-module-docstring

a = [1,2,3]
b = (4,5)
a.append(b)
